--- a/box/scripts/box.config
+++ b/box/scripts/box.config
@@ -25,12 +25,12 @@ intranet=(0.0.0.0/8 10.0.0.0/8 100.0.0.0/8 127.0.0.0/8 169.254.0.0/16 192.0.0.0/
 # The use of 100.0.0.0/8 instead of 100.64.0.0/10 is purely due to a mistake by China Telecom's service provider, and you can change it back.
 intranet6=(::/128 ::1/128 ::ffff:0:0/96 100::/64 64:ff9b::/96 2001::/32 2001:10::/28 2001:20::/28 2001:db8::/32 2002::/16 fe80::/10 ff00::/8)
 
-ipv6="disable"
+ipv6="enable"
 
 proxy_method="TPROXY"
 # REDIRECT: TCP only / TPROXY: TCP + UDP / MIXED: REDIRECT TCP + TUN UDP
 
-proxy_mode="blacklist"
+proxy_mode="whitelist"
 # blacklist / whitelist / core
 
 user_packages_list=()
@@ -52,7 +52,7 @@ clash_api_secret=
 use_custom_direct=false
 # true / false
 
-ctr_mode=disable
+ctr_mode=mode
 # disable / switch / selector / mode
 
 select_outbound=domestic
@@ -71,15 +71,15 @@ direct_outbound_list=""
 # Same as direct_outbound. SSID,Proxies, For example:
 # CMCC_XXXX,DIRECT;TPLINK_XXXX,ROUTER
 
-default_clash_mode=direct
+default_clash_mode=rule
 # Default proxies in cellular network
 
-direct_clash_mode=rule
+direct_clash_mode=direct
 # Clash Mode when connected to WLAN
 
 proxy_clash_mode=
 # Clash Mode when disconnected to WLAN
 
-direct_clash_mode_list=""
+direct_clash_mode_list="CMCC_5G,stop"
 # Same as direct_mode. SSID,ClashMode, For example:
 # CMCC_XXXX,rule;TPLINK_XXXX,rule-tplink
