--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Delete current prerelease assets
         uses: andreaswilli/delete-release-assets-action@v3.0.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.TOKEN }}
           tag: Prerelease
           deleteOnlyFromDrafts: false
 
@@ -31,7 +31,7 @@ jobs:
         with:
           tag_name: Prerelease
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Upload Prerelease
         uses: softprops/action-gh-release@v1
