--- a/box/scripts/box.config
+++ b/box/scripts/box.config
@@ -49,7 +49,7 @@ clash_api_port=9090
 clash_api_secret=
 # clash api secret
 
-use_custom_direct=false
+use_custom_direct=true
 # true / false
 
 ctr_mode=mode
